--- a/noticias/noticias-tecnologia/cadastro/cadastro.html
+++ b/noticias/noticias-tecnologia/cadastro/cadastro.html
@@ -34,6 +34,7 @@
             <button id="login">
                 <input type="submit" value="Criar conta." id="login">
             </button>
+            <a href="../login/login.html">login</a>
         </form>
         <aside id="bemvindo">
             <h2>Bem-vindo.</h2>
