--- a/noticias/login/login.html
+++ b/noticias/login/login.html
@@ -15,7 +15,7 @@
             --font-2: 'Noto Sans KR', sans-serif;
         }
         body {
-            background-image: linear-gradient(to left, #366df7, #172133);
+            background-color: #289BB8;
             font-family:Helvetica, sans-serif;
             position: relative;
         }
@@ -65,32 +65,38 @@
             border-color: rgba(0, 0, 0, 0.192);
         }
         button {
-            position: relative;
-            top: 84px;
-            left: 179px;
-            height: 27px;
+            background-color: #08060600;
+            border-color: #493f3f54;
             border: 0;
-            background-color: white;
+            position: relative;
+            left: 168px;
+            top: 87px;
         }
         input#botao {
-            border-radius: 25px;
-            width: 84px;
-            background-color: #f1f1f1e8;
-            text-align: center;
+            background-color: #81a3f925;
+            border-color: rgba(78, 72, 72, 0.137);
+            height: 2.0em;
+            font-weight: normal;
+            font-family: Arial, Helvetica, sans-serif;
+            width: 104px;
+            color: black;
         }
         button#cadastro {
             position: relative;
-            top: 172px;
-            left: 73px;
-            height: 27px;
+            top: 178px;
+            left: 50px;
+            height: 2em;
             border: 0;
             background-color: white;
         }
         input#cadastro {
-            border-radius: 25px;
-            width: 100px;
-            background-color: #f1f1f1e8;
-            text-align: center;
+            background-color: #81a3f925;
+            border-color: rgba(78, 72, 72, 0.137);
+            height: 2.2em;
+            font-weight: normal;
+            font-family: Arial, Helvetica, sans-serif;
+            width: 104px;
+            color: black;
         }
         hr {
             position: relative;
