--- a/noticias/login/login.html
+++ b/noticias/login/login.html
@@ -4,18 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>NeoTech - Login</title>
+    <link rel="shortcut icon" href="../site/Elegantthemes-Beautiful-Flat-Barchart.ico" type="image/x-icon">
     <style>
         @charset "UTF-8";
 
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap');
 
-        :root {
-            --font-1:Helvetica, sans-serif;
-            --font-2: 'Noto Sans KR', sans-serif;
-        }
         body {
-            background-color: #289BB8;
+            background-color:#9fd6f5;
             font-family:Helvetica, sans-serif;
             position: relative;
         }
@@ -33,8 +30,9 @@
             border-radius: 17px;
         }
         h1 {
+            color:  #003471;
             text-align: center;
-            font-family: var(--font-2);
+            font-family: 'Rajdhani', sans-serif;
             font-weight: bolder;
             font-size: 3.5em;
             margin-top: 36px;
@@ -51,13 +49,15 @@
             left: 112px;
         }
         label {
-            font-family: var(--font-2);
+            color: black;
+            font-family: 'Rajdhani', sans-serif;
             font-weight: bold;
             position: relative;
             left: 87px;
             top: -10px;
         }
         input {
+            color: #019bf0;
             display: block;
             width: 223px;
             height: 21px;
@@ -79,7 +79,7 @@
             font-weight: normal;
             font-family: Arial, Helvetica, sans-serif;
             width: 104px;
-            color: black;
+            color: grey;
         }
         button#cadastro {
             position: relative;
@@ -96,7 +96,7 @@
             font-weight: normal;
             font-family: Arial, Helvetica, sans-serif;
             width: 104px;
-            color: black;
+            color: grey;
         }
         hr {
             position: relative;
@@ -117,14 +117,17 @@
                 <label>Senha:</label>
                 <input type="password" name="senha" value="" required> 
             </div>
-            <button onclick="">
-                <input type="submit" value="Entrar" id="botao">
-            </button>
-            <button id="cadastro" onclick="">
-                <input type="submit" value="Cadastre-se" id="cadastro">
-            </button>
-
         </form>
+            <a href="#">
+                <button onclick="">
+                    <input type="submit" value="Entrar" id="botao">
+                </button>
+            </a>
+            <a href="../cadastro/cadastro.html">
+                <button id="cadastro" onclick="">
+                    <input type="submit" value="Cadastre-se" id="cadastro">
+                </button>
+            </a>
         <hr>
     </main>
 </body>
