--- a/contato.html
+++ b/contato.html
@@ -21,18 +21,28 @@
         <a href="cadastro.html" class="nav-link">Cadastro</a>
       </nav>
     </header>
-    <main>
-      <h1>Fale conosco</h1>
-      <p>preencha o formulário abaixo para entrar em contato conosco.</p>
-      <form action="#" class="form">
-        <label for="" class="form">Nome Completo</label>
-        <input type="text" class="input" />
+    <main class="main-contato">
+      <h1 class="main-titulo-contato">Fale conosco</h1>
+      <p class="paragrafo">preencha o formulário abaixo para entrar em contato conosco.</p>
+      <form action="#" class="form-contato">
 
-        <label for="" class="form">E-mail</label>
-        <input type="email" />
+        <div class="space-cadastro">
+          <label for="" class="label">Nome Completo</label>
+          <input type="text" class="input" />
+        </div>
 
-        <label for="">Qual sua dúvida?</label>
-        <textarea name="" class="texto" cols="80" rows="7"></textarea>
+        <div class="space-cadastro">
+          <label for="" class="label">E-mail</label>
+          <input type="email" class="input"/>
+        </div class="space-cadastro">
+      
+        <div class="space-cadastro">
+          <label for="" class="label">Qual sua dúvida?</label>
+          <textarea name="" class="textarea" cols="80" rows="7"></textarea>
+        </div>
+        <a href="#">
+          <input type="submit" value="Enviar" class="input-contato">
+        </a>
       </form>
     </main>
   </body>
