--- a/login.html
+++ b/login.html
@@ -7,139 +7,41 @@
     <title>NeoTech - Login</title>
     <link
       rel="shortcut icon"
-      href="../site/Elegantthemes-Beautiful-Flat-Barchart.ico"
+      href="./assets/images/Elegantthemes-Beautiful-Flat-Barchart.ico"
       type="image/x-icon"
     />
-    <style>
-      @charset "UTF-8";
-
-      @import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@700&display=swap");
-
-      body {
-        background-color: #9fd6f5;
-        font-family: Helvetica, sans-serif;
-        position: relative;
-      }
-      main {
-        background-color: #ffffff;
-        width: 450px;
-        height: 500px;
-        position: absolute;
-        top: 50%;
-        right: 50%;
-        margin-right: -225px;
-        margin-bottom: -250px;
-        margin-top: 79px;
-        box-shadow: 2px 4px 8px 0px rgb(0 0 0 / 43%);
-        border-radius: 17px;
-      }
-      h1 {
-        color: #003471;
-        text-align: center;
-        font-family: "Rajdhani", sans-serif;
-        font-weight: bolder;
-        font-size: 3.5em;
-        margin-top: 36px;
-      }
-      div#login {
-        position: relative;
-        top: 33px;
-        left: 112px;
-        height: 43px;
-      }
-      div#senha {
-        position: relative;
-        top: 65px;
-        left: 112px;
-      }
-      label {
-        color: black;
-        font-family: "Rajdhani", sans-serif;
-        font-weight: bold;
-        position: relative;
-        left: 87px;
-        top: -10px;
-      }
-      input {
-        color: #019bf0;
-        display: block;
-        width: 223px;
-        height: 21px;
-        border-radius: 10px;
-        border-color: rgba(0, 0, 0, 0.192);
-      }
-      button {
-        background-color: #08060600;
-        border-color: #493f3f54;
-        border: 0;
-        position: relative;
-        left: 168px;
-        top: 87px;
-      }
-      input#botao {
-        background-color: #81a3f925;
-        border-color: rgba(78, 72, 72, 0.137);
-        height: 2em;
-        font-weight: normal;
-        font-family: Arial, Helvetica, sans-serif;
-        width: 104px;
-        color: grey;
-      }
-      button#cadastro {
-        position: relative;
-        top: 178px;
-        left: 50px;
-        height: 2em;
-        border: 0;
-        background-color: white;
-      }
-      input#cadastro {
-        background-color: #81a3f925;
-        border-color: rgba(78, 72, 72, 0.137);
-        height: 2.2em;
-        font-weight: normal;
-        font-family: Arial, Helvetica, sans-serif;
-        width: 104px;
-        color: grey;
-      }
-      hr {
-        position: relative;
-        top: 100px;
-        width: 362px;
-      }
-    </style>
+    <link rel="stylesheet" href="assets/styles/main.css".css">
   </head>
   <body>
-    <header>
+    <header class="header-login">
       <a href="index.html" class="navbar-brand">NeoTech</a>
       <nav class="main-navbar">
-        <a href="login.html" class="nav-link">Login</a>
         <a href="cadastro.html" class="nav-link">Cadastro</a>
       </nav>
     </header>
-    <main>
-      <h1>Login</h1>
+    <main class="main-login">
+      <h1 class="main-titulo">Login</h1>
       <form action="">
-        <div id="login">
-          <label>Usuário:</label>
-          <input type="text" name="usuario" value="" required />
+        <div class="space">
+          <label class="label">Usuário:</label>
+          <input type="text" name="usuario" value="" class="input" required />
         </div>
-        <div id="senha">
-          <label>Senha:</label>
-          <input type="password" name="senha" value="" required />
+        <div class="space">
+          <label class="label">Senha:</label>
+          <input type="password" name="senha" value="" class="input" required />
         </div>
       </form>
-      <a href="#">
-        <button onclick="">
-          <input type="submit" value="Entrar" id="botao" />
+      <a href="index.html">
+        <button class="button">
+          <input type="submit" value="Entrar" class="input-submi" />
         </button>
       </a>
-      <a href="../cadastro/cadastro.html">
-        <button id="cadastro" onclick="">
-          <input type="submit" value="Cadastre-se" id="cadastro" />
+      <a href="cadastro.html">
+        <button class="button" onclick="">
+          <input type="submit" value="Cadastre-se" class="input-submi" />
         </button>
       </a>
-      <hr />
+      <hr class="quebra"/>
     </main>
   </body>
 </html>
