fim do projeto.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
-<a href="contato.html">contato</a>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="utf-8">
+        <title>NeoTech</title>
+        <link rel="stylesheet" href="assets/styles/index.css">
+        <link
+      rel="shortcut icon"
+      href="./assets/images/Elegantthemes-Beautiful-Flat-Barchart.ico"
+      type="image/x-icon"
+      />
+    </head>
+    <body> 
+        <header class="header-index">
+            <a href="index.html" class="navbar-brand">NeoTech</a>
+            <nav class="main-navbar">
+              <a href="login.html" class="nav-link">Login</a>
+              <a href="cadastro.html" class="nav-link">Cadastro</a>
+              <a href="contato.html" class="nav-link">Contato</a>
+            </nav>
+        </header>
+    <br>
+        <main class="main-index">
+            <h2 class="h2-index">Últimas notícias</h2>
+            <div  class="div-leitura"style="border-style:solid; color: whitesmoke; background-color: white; margin: 20px;">
+                <img src="assets/images/facebook-dimensão.png" alt="Apple Watch 7.6.1" style="margin: 14px; width: 340px; height: 200px">
+                <p class="paragrafo">Facebook dobra lucro no segundo trimestre, mas espera crescer mais lentamente -
+                    Expectativa de desaceleração se deve, especialmente, às novas regras de publicidade da Apple que, recentemente, começou a obrigar os criadores de aplicativos a pedirem permissão antes de coletas dados.</p>
+            </div>
+            <div  class="div-leitura"style="border-style:solid; color: whitesmoke; background-color: white; margin: 20px;">
+                <img src="assets/images/relogio-dimensão.png" alt="Samsung" style="margin: 14px; width: 340px; height: 200px">
+                    <p class="paragrafo">Apple atualiza o watchOS para a versão 7.6.1 - Três dias depois de liberar o iOS 14.7.1, o iPadOS 14.7.1 e o macOS Big Sur 11.5.1, a Apple disponibilizou agora o watchOS 7.6.1 (compilação 18U70) para todos os donos de Apple Watches compatíveis. De acordo com a Apple, a atualização “fornece atualizações importantes de segurança, sendo recomendada a todos os usuários”.</p>
+            </div>
+            <div class="div-leitura"style="border-style:solid; color: whitesmoke; background-color: white; margin: 20px;">
+                <img src="assets/images/samsung-dimensão.png" alt="Reels" style="width: 340px; height: 200px; margin: 14px;">
+                <p class="paragrafo">Samsung inicia beta da One UI 4.0, baseada no Android 12 - A Samsung abriu o programa de testes da próxima geração de sua interface customizada e convida pessoas que tenham dispositivos da família Galaxy S21 para conferirem a One UI 4.0 Beta, baseada no Android 12.</p>
+            </div>
+        </main>
+    </body>
+</html>
