--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div  class="div-leitura"style="border-style:solid; color: whitesmoke; background-color: white; margin: 20px;">
                 <img src="assets/images/facebook-dimensão.png" alt="Apple Watch 7.6.1" style="margin: 14px; width: 340px; height: 200px">
                 <p class="paragrafo">Facebook dobra lucro no segundo trimestre, mas espera crescer mais lentamente -
-                    Expectativa de desaceleração se deve, especialmente, às novas regras de publicidade da Apple que, recentemente, começou a obrigar os criadores de aplicativos a pedirem permissão antes de coletas dados.</p>
+                Expectativa de desaceleração se deve, especialmente, às novas regras de publicidade da Appleque, recentemente, começou a obrigar os criadores de aplicativos a pedirem permissão antes decoletas dados.</p>
             </div>
             <div  class="div-leitura"style="border-style:solid; color: whitesmoke; background-color: white; margin: 20px;">
                 <img src="assets/images/relogio-dimensão.png" alt="Samsung" style="margin: 14px; width: 340px; height: 200px">
